--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@ override.tf.json
 Temp/
 
 terraform.tfvars
+
+# Node modules
+FrontendCode/node_modules/
+web/node_modules/
+
+# React Build Files
+FrontendCode/Build
+web/Build
+
+# Mac Folder
+.DS_Store
