--- a/.gitignore
+++ b/.gitignore
@@ -31,13 +31,14 @@ Temp/
 
 terraform.tfvars
 
-# Node modules
+# Frontend Code
+FrontendCode/.env
 FrontendCode/node_modules/
 web/node_modules/
-
-# React Build Files
 FrontendCode/Build
 web/Build
 
 # Mac Folder
 .DS_Store
+
+
