Created Sanitized versions of local files

--- a/FrontendCode/.env.development
+++ b/FrontendCode/.env.development
@@ -1,6 +1,6 @@
 REACT_APP_redirectUri=http://localhost:3000
-REACT_APP_clientID=d41df722-0259-4228-9dca-8aa449ac9337
-REACT_APP_TenantID=6ed84810-9473-45d6-bf1b-4e184c8f603b
-REACT_APP_APIMName=https://apim-sandboxmgmt-prod.azure-api.net
-REACT_APP_APIName=sandbox2
+REACT_APP_clientID=<fill in>
+REACT_APP_TenantID=<fill in>
+REACT_APP_APIMName=<fill in>
+REACT_APP_APIName=sandbox
 REACT_APP_APICreate=/create
