--- a/FrontendCode/.env.development
+++ b/FrontendCode/.env.development
@@ -6,3 +6,4 @@ REACT_APP_APIName=sandbox
 REACT_APP_APICreate=/create
 REACT_APP_APIList=/list
 REACT_APP_APIDelete=/delete
+REACT_APP_APIReset=/reset
