Bug-fixes and parameterize

--- a/FrontendCode/.env.development
+++ b/FrontendCode/.env.development
@@ -1,7 +1,8 @@
 REACT_APP_redirectUri=http://localhost:3000
-REACT_APP_clientID=09c224da-e11b-4c8a-8276-27af77b7df02
-REACT_APP_TenantID=6ed84810-9473-45d6-bf1b-4e184c8f603b
-REACT_APP_APIMName=https://apim-sandboxmgmt-prod-30.azure-api.net
+REACT_APP_clientID=<fill-in>
+REACT_APP_TenantID=<fill-in>
+REACT_APP_SandboxSubscription=<fill-in>
+REACT_APP_APIMName=https://<fill-in>.azure-api.net
 REACT_APP_APIName=sandbox
 REACT_APP_APICreate=/create
 REACT_APP_APIList=/list
