--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,11 @@
 {
     "recommendations": [
         "ms-vscode.vscode-node-azure-pack",
-        "ms-vscode.powershell"
+        "ms-vscode.powershell",
+        "tfsec.tfsec",
+        "azapi-vscode.azapi",
+        "esbenp.prettier-vscode",
+        "hashicorp.terraform",
+        "ms-azuretools.vscode-azureterraform"
     ]
 }
