Switching to single quotes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,5 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "prettier.jsxSingleQuote": true,
+    "prettier.singleQuote": true,
 }
