--- a/Infra/terraform.tfvars.example
+++ b/Infra/terraform.tfvars.example
@@ -36,9 +36,9 @@ enable_private_networking = true
 vnet_name = ""
 
 vnet_ip_space = [{
-  vnetcidr            = "10.0.0.0/24"
-  privateendpointcidr = "10.0.0.64/27"
-  vnetintegrationcidr = "10.0.0.96/27"
+  vnetcidr            = ["10.0.0.0/24"]
+  privateendpointcidr = ["10.0.0.64/27"]
+  vnetintegrationcidr = ["10.0.0.96/27"]
 }]
 
 app_service_plan_name = ""
