--- a/Infra/terraform.tfvars.example
+++ b/Infra/terraform.tfvars.example
@@ -45,6 +45,8 @@ app_service_plan_name = ""
 
 function_app_name = ""
 
+enable_frontend = true
+
 app_service_plan_frontend_name = ""
 
 web_app_frontend_name = ""
