Converted from using Create React App to NextJS

--- a/App/FrontendPortal/.env.development
+++ b/App/FrontendPortal/.env.development
@@ -1,10 +1,10 @@
-REACT_APP_redirectUri=http://localhost:3000
-REACT_APP_clientID=<fill-in>
-REACT_APP_TenantID=<fill-in>
-REACT_APP_SandboxSubscription=<fill-in>
-REACT_APP_api_management_name=https://<fill-in>.azure-api.net
-REACT_APP_APIName=sandbox
-REACT_APP_APICreate=/create
-REACT_APP_APIList=/list
-REACT_APP_APIDelete=/delete
-REACT_APP_APIReset=/reset
+NEXT_PUBLIC_redirectUri=http://localhost:3000
+NEXT_PUBLIC_clientID=<fill-in>
+NEXT_PUBLIC_TenantID=<fill-in>
+NEXT_PUBLIC_SandboxSubscription=<fill-in>
+NEXT_PUBLIC_api_management_name=https://<fill-in>.azure-api.net
+NEXT_PUBLIC_APIName=sandbox
+NEXT_PUBLIC_APICreate=/create
+NEXT_PUBLIC_APIList=/list
+NEXT_PUBLIC_APIDelete=/delete
+NEXT_PUBLIC_APIReset=/reset
