--- a/App/FrontendPortal/package.json
+++ b/App/FrontendPortal/package.json
@@ -1,44 +1,23 @@
 {
-  "name": "vending",
+  "name": "ASAPPortal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@azure/msal-browser": "^2.35.0",
-    "@azure/msal-react": "^1.5.5",
-    "@chakra-ui/icons": "^2.0.18",
-    "@chakra-ui/react": "^2.5.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@react-md/theme": "^5.1.3",
-    "@react-md/typography": "^5.1.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@azure/msal-browser": "^2.37.0",
+    "@azure/msal-react": "^1.5.7",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.6.0",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "bootstrap": "^5.2.3",
-    "env-cmd": "^10.1.0",
-    "esm": "^3.2.25",
-    "express": "^4.18.2",
-    "framer-motion": "^10.10.0",
-    "http-proxy-middleware": "^2.0.6",
-    "node-fetch": "^2.6.9",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
-    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "next": "^13.3.4"
   },
   "scripts": {
-    "start": "env-cmd -f .env.development react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "browserslist": {
     "production": [
