--- a/.github/workflows/pr-infracost.yml
+++ b/.github/workflows/pr-infracost.yml
@@ -40,8 +40,8 @@ jobs:
       # Generate Infracost JSON file as the baseline.
       - name: Generate Infracost cost estimate baseline
         run: |
-          infracost breakdown --path=infra/ \
-                              --format=json
+          infracost breakdown --path=Infra/ \
+      #                        --format=json \
       #                        --out-file=/tmp/infracost-base.json
 
       # # Checkout the current PR branch so we can create a diff.
