--- a/.github/workflows/pr-infracost.yml
+++ b/.github/workflows/pr-infracost.yml
@@ -41,32 +41,32 @@ jobs:
       - name: Generate Infracost cost estimate baseline
         run: |
           infracost breakdown --path=Infra/ \
-      #                        --format=json \
-      #                        --out-file=/tmp/infracost-base.json
+                             --format=json \
+                             --out-file=/tmp/infracost-base.json
 
-      # # Checkout the current PR branch so we can create a diff.
-      # - name: Checkout PR branch
-      #   uses: actions/checkout@v3
+      # Checkout the current PR branch so we can create a diff.
+      - name: Checkout PR branch
+        uses: actions/checkout@v3
 
-      # # Generate an Infracost diff and save it to a JSON file.
-      # - name: Generate Infracost diff
-      #   run: |
-      #     infracost diff --path=infra/ \
-      #                     --format=json \
-      #                     --compare-to=/tmp/infracost-base.json \
-      #                     --out-file=/tmp/infracost.json
+      # Generate an Infracost diff and save it to a JSON file.
+      - name: Generate Infracost diff
+        run: |
+          infracost diff --path=Infra/ \
+                          --format=json \
+                          --compare-to=/tmp/infracost-base.json \
+                          --out-file=/tmp/infracost.json
 
-      # # Posts a comment to the PR using the 'update' behavior.
-      # # This creates a single comment and updates it. The "quietest" option.
-      # # The other valid behaviors are:
-      # #   delete-and-new - Delete previous comments and create a new one.
-      # #   hide-and-new - Minimize previous comments and create a new one.
-      # #   new - Create a new cost estimate comment on every push.
-      # # See https://www.infracost.io/docs/features/cli_commands/#comment-on-pull-requests for other options.
-      # - name: Post Infracost comment
-      #   run: |
-      #     infracost comment github --path=/tmp/infracost.json \
-      #                              --repo=$GITHUB_REPOSITORY \
-      #                              --github-token=${{github.token}} \
-      #                              --pull-request=${{github.event.pull_request.number}} \
-      #                              --behavior=update
+      # Posts a comment to the PR using the 'update' behavior.
+      # This creates a single comment and updates it. The "quietest" option.
+      # The other valid behaviors are:
+      #   delete-and-new - Delete previous comments and create a new one.
+      #   hide-and-new - Minimize previous comments and create a new one.
+      #   new - Create a new cost estimate comment on every push.
+      # See https://www.infracost.io/docs/features/cli_commands/#comment-on-pull-requests for other options.
+      - name: Post Infracost comment
+        run: |
+          infracost comment github --path=/tmp/infracost.json \
+                                   --repo=$GITHUB_REPOSITORY \
+                                   --github-token=${{github.token}} \
+                                   --pull-request=${{github.event.pull_request.number}} \
+                                   --behavior=update
