--- a/App/FrontendPortal/Dockerfile
+++ b/App/FrontendPortal/Dockerfile
@@ -1,8 +1,5 @@
 # Fetching the latest node image on alpine linux
-FROM node:alpine AS development
-
-# Declaring env
-ENV NODE_ENV development
+FROM node:alpine
 
 # Setting up the work directory
 WORKDIR /react-app
@@ -16,5 +13,7 @@ COPY . .
 
 EXPOSE 3000
 
+RUN npm install --global serve
+
 # Starting our application
-CMD npm start
+CMD serve .\build\
