--- a/.github/workflows/pr-infracost.yml
+++ b/.github/workflows/pr-infracost.yml
@@ -1,3 +1,5 @@
+name: 'Infracost PR'
+
 # The GitHub Actions docs (https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on)
 # describe other options for 'on', 'pull_request' is a good default.
 on:
@@ -9,10 +11,6 @@ on:
         required: true
         type: string
 
-env:
-  # If you use private modules you'll need this env variable to use
-  # the same ssh-agent socket value across all jobs & steps.
-  SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 jobs:
   infracost:
     name: Infracost
