--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -53,6 +53,6 @@
   "skipCi": true,
   "repoType": "github",
   "repoHost": "https://github.com",
-  "projectName": "ASAP",
+  "projectName": "Labcoat",
   "projectOwner": "bcasey266"
 }
